--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
